package profiles

/* TODO: Será implementada na 0.2v */
type Profile struct {}
